<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    tools:context=".EditarLocalFragment" >

    <com.google.android.material.textfield.TextInputLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_marginStart="8dp"
        android:layout_marginLeft="8dp"
        android:layout_marginTop="8dp"
        android:layout_marginEnd="8dp"
        android:layout_marginRight="8dp">

        <com.google.android.material.textfield.TextInputEditText
            android:id="@+id/editTextNomeLocal"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:hint="@string/nome_local"
            android:textColorHint="#757575"
            tools:ignore="TextContrastCheck,SpeakableTextPresentCheck" />

        <com.google.android.material.textfield.TextInputLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_marginTop="8dp">

            <com.google.android.material.textfield.TextInputEditText
                android:id="@+id/editTextLocalizacao"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:hint="@string/localizacao"
                android:inputType="textPersonName"
                android:textColorHint="#757575"
                tools:ignore="TextContrastCheck,SpeakableTextPresentCheck" />

            <com.google.android.material.textfield.TextInputLayout
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:layout_marginTop="8dp">

                <com.google.android.material.textfield.TextInputEditText
                    android:id="@+id/editTextEndereco"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:hint="@string/endereco"
                    android:inputType="textPersonName"
                    android:textColorHint="#757575"
                    tools:ignore="TextContrastCheck,SpeakableTextPresentCheck" />

                <com.google.android.material.textfield.TextInputLayout
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:layout_marginTop="8dp">

                    <com.google.android.material.textfield.TextInputEditText
                        android:id="@+id/editTextCapacidade"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:hint="@string/capacidade"
                        android:inputType="textPersonName"
                        android:textColorHint="#757575"
                        tools:ignore="TextContrastCheck,SpeakableTextPresentCheck" />

                </com.google.android.material.textfield.TextInputLayout>

            </com.google.android.material.textfield.TextInputLayout>


        </com.google.android.material.textfield.TextInputLayout>


    </com.google.android.material.textfield.TextInputLayout>

</LinearLayout>