<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    tools:context=".EditarArtistaFragment" >

    <com.google.android.material.textfield.TextInputLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_marginStart="8dp"
        android:layout_marginLeft="8dp"
        android:layout_marginTop="8dp"
        android:layout_marginEnd="8dp"
        android:layout_marginRight="8dp">

        <com.google.android.material.textfield.TextInputEditText
            android:id="@+id/editTextNomeArtista"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:hint="@string/nome_artista"
            android:textColorHint="#757575"
            tools:ignore="TextContrastCheck,SpeakableTextPresentCheck" />

        <com.google.android.material.textfield.TextInputLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_marginTop="8dp">

            <com.google.android.material.textfield.TextInputEditText
                android:id="@+id/editTextEnderecoArt"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:hint="@string/enderecoArt"
                android:inputType="textPersonName"
                android:textColorHint="#757575"
                tools:ignore="TextContrastCheck,SpeakableTextPresentCheck" />

            <com.google.android.material.textfield.TextInputLayout
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:layout_marginTop="8dp">

                <com.google.android.material.textfield.TextInputLayout
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:layout_marginTop="8dp">

                    <com.google.android.material.textfield.TextInputEditText
                        android:id="@+id/editTextTelemovelArt"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:hint="@string/telemovelArt"
                        android:inputType="textPersonName"
                        android:textColorHint="#757575"
                        tools:ignore="TextContrastCheck,SpeakableTextPresentCheck" />

                    <TextView
                        android:id="@+id/textViewNacionalidade"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_marginTop="8dp"
                        android:text="@string/nacionalidade" />

                    <Spinner
                        android:id="@+id/spinnerNacionalidades"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:minHeight="48dp"
                        tools:ignore="SpeakableTextPresentCheck" />

                </com.google.android.material.textfield.TextInputLayout>

            </com.google.android.material.textfield.TextInputLayout>


        </com.google.android.material.textfield.TextInputLayout>


    </com.google.android.material.textfield.TextInputLayout>

</LinearLayout>